--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
     "@badeball/cypress-cucumber-preprocessor": "^22.1.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.5",
     "@cucumber/cucumber": "^11.3.0",
+    "@shelex/cypress-allure-plugin": "^2.41.2",
     "cypress": "^14.5.0"
-  }
+  },
+  "scripts": {
+  "test": "cypress run --env allure=true",
+  "test:headless": "cypress run --browser chrome --headless --env allure=true",
+  "test:open": "cypress open",
+  "allure:generate": "allure generate allure-results --clean -o allure-report",
+  "allure:open": "allure open allure-report",
+  "allure:clean": "rm -rf allure-results allure-report",
+  "test:full": "yarn allure:clean && yarn test && yarn allure:generate && yarn allure:open"
+}
+
 }
