--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "allure:generate": "allure generate allure-results --clean -o allure-report",
   "allure:open": "allure open allure-report",
   "allure:clean": "rm -rf allure-results allure-report",
-  "test:full": "yarn allure:clean && yarn test && yarn allure:generate && yarn allure:open"
+  "test:full": "yarn allure:clean && yarn test || true && yarn allure:generate && yarn allure:open"
 }
 
 }
