--- a/package.json
+++ b/package.json
@@ -4,20 +4,27 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.5",
     "@cucumber/cucumber": "^11.3.0",
     "@shelex/cypress-allure-plugin": "^2.41.2",
-    "cypress": "^14.5.0"
+    "allure-commandline": "^2.34.1",
+    "cypress": "^14.5.1"
   },
   "scripts": {
-  "test:open": "cypress open",
-  "test": "cypress run --env allure=true",
-  "test:open:chrome": "cypress open --browser chrome",
-  "test:open:firefox": "cypress open --browser firefox",
-  "test:open:edge": "cypress open --browser edge",
-  "test:open:electron": "cypress open --browser electron",
-  "test:headless": "cypress run --browser chrome --headless --env allure=true",
-  "allure:generate": "allure generate allure-results --clean -o allure-report",
-  "allure:open": "allure open allure-report",
-  "allure:clean": "rm -rf allure-results allure-report",
-  "test:full": "yarn allure:clean && yarn test || true && yarn allure:generate && yarn allure:open"
-}
-
+    "test:open": "cypress open",
+    "test": "cypress run --env allure=true",
+    "test:open:chrome": "cypress open --browser chrome",
+    "test:open:firefox": "cypress open --browser firefox",
+    "test:open:edge": "cypress open --browser edge",
+    "test:open:electron": "cypress open --browser electron",
+    "test:headless": "cypress run --browser chrome --headless --env allure=true",
+    "allure:generate": "allure generate allure-results --clean -o allure-report",
+    "allure:open": "allure open allure-report",
+    "allure:clean": "rm -rf allure-results allure-report",
+    "test:full": "yarn allure:clean && yarn test || true && yarn allure:generate && yarn allure:open"
+  },
+  "name": "project-bdd-orangehrm",
+  "version": "1.0.0",
+  "description": "Project_BDD_OrangeHRM",
+  "main": "index.js",
+  "repository": "https://github.com/Albarokah9/Project_BDD_OrangeHRM.git",
+  "author": "Albarokah Rifansah",
+  "license": "MIT"
 }
